corrected mobile size spacing between user icon and logo

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -270,7 +270,7 @@ body {
   /* Header / Navigation */
 
   .headerBox {
-    padding: 0 15px 0 25px;
+    padding: 0 10px 0px 20px;
   }
 
   .headerBox .logo img {
@@ -283,7 +283,7 @@ body {
     align-items: center;
     margin-top: 10px;
     width: 100px;
-    margin-right: 5px;
+    margin-left: 5px;
   }
 
   .user-icon img {
